cmake_minimum_required(VERSION 3.21)
project(Clearn)

set(CMAKE_CXX_STANDARD 14)

add_executable(Clearn main.cpp)
add_executable(t1 boolt.cpp)
add_executable(t2 matht.cpp)
add_executable(t3 arrayt.cpp)
add_executable(t4 structt.cpp)
add_executable(t5 enumt.cpp)
add_executable(t6 bublesort.cpp)
add_executable(t7 stringt.cpp)
add_executable(fun functiont.cpp)
add_executable(hanoi hanoi.cpp)
add_executable(pointer pointer.cpp)
add_executable(pointer_s poiniter_struct.cpp)
add_executable(ato-sto auto_sto.cpp)
add_executable(class_ob class_ob.cpp)
add_executable(p_c_z point_circle_zhu.cpp)